--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <!-- estoy creando paises -->
-    <div style="background-color: green; color: white">
+    <div style="background-color: pink; color: white">
 	    <h2>Ciudad de México</h2>
 	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores numquam autem animi porro dolorum, cumque distinctio doloremque, optio excepturi vel ipsa et velit voluptates repellat pariatur libero ratione, <span style="color: yellow">vero iusto</span>.</p>
 	</div>
